--- a/memcached_benchmark/memcached_client/README
+++ b/memcached_benchmark/memcached_client/README
@@ -7,10 +7,30 @@ The benchmark shows regular cache misses, together with total misses - i.e. the 
 The following client is a modification of CloudSuite's client, and those is distributed under the same licence. Please see the licence below.
 The modification of CloudSuite's client was developed by Samyon Ristov at Hebrew University of Jerusalem, under the supervision of Prof. Danny Dolev, Tal Anker and Yaron Weinsberg.
 
+
+
+
+Known Issues:
+- Events are only added (after a server goes down) and never deleted. Therefore the benchmark is not really scalable. To solve the issue should be added a deletion of the events after a minute after the server went down (or after X 'empty' events). The reason the events are not deleted immediately is because there are always some events in the queue that should be handled before the deletion.   
+- 'fget' does not work correctly, therefore all the while-loops that readed the files where commented out.
+- In order of failover to work, all connections must TX at least once before server goes down.
+- Failover for second time (second server went down) is not fully implemented. The implementation will be the same as with the first failover.
+- "total misses" is always 0
+- There is a global mutex for the failover. It's slow and should be changed to a mutex per connection.
+- Mutex's lock is not free on one scenario. There is a comment for it.
+- There is a lot of logs during the reconnection.
+- On read response, there is a missed place with possible read from socket - the program can fail there.
+
+
+
+
 Original benchmark:
 http://parsa.epfl.ch/cloudsuite/memcached.html
 Link to original license:
 http://parsa.epfl.ch/cloudsuite/licenses.html
+
+
+
 
 Licence:
 CloudSuite 2.0 License
@@ -31,7 +51,6 @@ modification, are permitted provided that the following conditions are met:
     products derived from this software without specific prior written permission.
 
     THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE PARALLEL SYSTEMS ARCHITECTURE LABORATORY, EPFL BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-
 
 Original README:
 
